WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154898
REGRESSION (
r197426
): Missed adding unicode parameter to call to Yarr::parse() in URLFilterParser::addPattern()
https://bugs.webkit.org/show_bug.cgi?id=154898
Summary
REGRESSION (r197426): Missed adding unicode parameter to call to Yarr::parse(...
Michael Saboff
Reported
2016-03-01 18:28:40 PST
Missed adding "false" unicode parameter.
Attachments
Patch
(1.45 KB, patch)
2016-03-01 18:31 PST
,
Michael Saboff
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2016-03-01 18:31:00 PST
Created
attachment 272623
[details]
Patch
WebKit Commit Bot
Comment 2
2016-03-01 19:22:22 PST
Comment on
attachment 272623
[details]
Patch Clearing flags on attachment: 272623 Committed
r197437
: <
http://trac.webkit.org/changeset/197437
>
WebKit Commit Bot
Comment 3
2016-03-01 19:22:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug