REGRESSION (r197426): Missed adding unicode parameter to call to Yarr::parse() in URLFilterParser::addPattern() https://bugs.webkit.org/show_bug.cgi?id=154898

Reviewed by Saam Barati.

This is a fix for the API tests after r197426.

Added missing bool unicode parameter of "false".

* contentextensions/URLFilterParser.cpp:
(WebCore::ContentExtensions::URLFilterParser::addPattern):


Canonical link: https://commits.webkit.org/172991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@197437 268f45cc-cd09-0410-ab3c-d52691b4dbfc